syntax = "proto3";

package project.planton.provider.kubernetes.workload.microservicekubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/workload/microservicekubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/workload/microservicekubernetes/v1/stack_outputs.proto";
import "project/planton/shared/status.proto";
import "project/planton/shared/metadata.proto";

//microservice-kubernetes
message MicroserviceKubernetes {
  //api-version
  string api_version = 1 [
    (buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2 [
    (buf.validate.field).string.const = 'MicroserviceKubernetes'
  ];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true
  ];

  //spec
  MicroserviceKubernetesSpec spec = 4 [
    (buf.validate.field).required = true
  ];

  //status
  MicroserviceKubernetesStatus status = 5;
}

//microservice-kubernetes-status
message MicroserviceKubernetesStatus {
  //stack-outputs
  MicroserviceKubernetesStackOutputs outputs = 1;
}
